# xiaozibao

./: .gitignore  Credit.md  Discussion.md  FAQ.md  Makefile  README.html  README.md  TODO.md
cmd/: health_check.sh  installation.sh  show_demo.py  show_demo.sh  start_service.sh  uninstallation.sh  upgrade.sh  utility.sh
code/: INSTALL  INSTALL.html  Makefile
code/cmd/: Makefile  health_check.sh  install.sh  installation.sh  show_demo.py  show_demo.sh  (+4 more)
code/webcrawl_article/snake_worker/: Makefile  Makefile.in  configure.ac  snake_workerctl  snake_workerctl.in  snake_workerctrl  snake_workerd  snake_workerd.in
code/webcrawl_article/snake_worker/ebin/: curl_queue_listener.beam  curl_worker.beam  shell_queue_listener.beam  shell_worker.beam  snake_utility.beam  snake_worker_app.beam  snake_worker_sup.beam
code/webcrawl_article/snake_worker/if/: snake_worker.thrift
code/webcrawl_article/snake_worker/include/: defined.hrl  vsn.hrl
code/webcrawl_article/snake_worker/rel/: reltool.config
code/webcrawl_article/snake_worker/rel/files/: app.config
code/webcrawl_article/snake_worker/scripts/php-lib/interface/: ecae-queue-loop.php
code/webcrawl_article/snake_worker/src/: snake_utility.erl  snake_worker_mgmt.erl  snake_worker_sup.erl  snake_worker_thrift.erl
code/webcrawl_article/snake_worker/src/shell_worker/: shell_queue_listener.erl  shell_worker.erl
data/: source.html  source.md
feedback/: readme.md
puppet/: README  README.md  config_db.pp  install_package.pp  maintain_service.pp  setting.pp  setting.pp.sample  setup.pp  update_files.pp  utility.pp
(+721 files in other folders)
